samples/_failures_safe/1761479829_d9a429_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ec6c5fbd.c: In function ‘main’:
./samples/SAFE/__tmp_ec6c5fbd.c:142:12: error: missing terminating " character
  142 |     printf("\nDecompressed data (%zu bytes):
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_ec6c5fbd.c:142:5: error: expected expression at end of input
  142 |     printf("\nDecompressed data (%zu bytes):
      |     ^~~~~~
./samples/SAFE/__tmp_ec6c5fbd.c:142:5: error: expected declaration or statement at end of input
